<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context="com.project.solomode.kinerjareport.InsertActivity.InsertActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="8dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:subtitleTextColor="@android:color/white"
        app:titleTextColor="@android:color/white">

    </android.support.v7.widget.Toolbar>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/oval_btn"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/varela_round"
        android:text="@string/simpan"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_cencel" />

    <Button
        android:id="@+id/btn_cencel"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/oval_btn_negative"
        android:clickable="true"
        android:drawableStart="@drawable/ic_arrow_back"
        android:focusable="true"
        android:fontFamily="@font/varela_round"
        android:text="@string/batal"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scrollbar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/btn_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/oval_edit">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tanggal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    app:errorTextAppearance="@style/error_appearance">

                    <EditText
                        android:id="@+id/input_tanggal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:clickable="true"
                        android:drawableEnd="@drawable/ic_arrow_down"
                        android:editable="false"
                        android:focusable="false"
                        android:fontFamily="@font/varela_round"
                        android:gravity="center_vertical"
                        android:hint="@string/tanggal"
                        android:inputType="textCapSentences"
                        android:longClickable="false"
                        android:padding="2dp"
                        android:singleLine="true"
                        android:textSize="14sp"
                        tools:ignore="Deprecated,KeyboardInaccessibleWidget" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/oval_edit">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/kegiatan"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    app:errorTextAppearance="@style/error_appearance">

                    <EditText
                        android:id="@+id/input_kegiatan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/varela_round"
                        android:gravity="center_vertical"
                        android:hint="@string/kegiatan"
                        android:inputType="textMultiLine"
                        android:padding="2dp"
                        android:singleLine="false"
                        android:textSize="14sp" />

                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:id="@+id/clear_kegiatan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="8dp"
                    android:visibility="gone"
                    app:srcCompat="@drawable/ic_clear"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/oval_edit">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/volume"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    app:errorTextAppearance="@style/error_appearance">

                    <EditText
                        android:id="@+id/input_volume"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/varela_round"
                        android:hint="@string/volume"
                        android:inputType="number"
                        android:padding="2dp"
                        android:singleLine="true"
                        android:textSize="14sp" />

                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:id="@+id/clear_volume"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="8dp"
                    android:visibility="gone"
                    app:srcCompat="@drawable/ic_clear"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/oval_edit">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/satuan"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="8dp"
                    app:errorTextAppearance="@style/error_appearance">

                    <EditText
                        android:id="@+id/input_satuan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/varela_round"
                        android:hint="@string/satuan"
                        android:inputType="text"
                        android:padding="2dp"
                        android:singleLine="true"
                        android:textSize="14sp" />

                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:id="@+id/clear_satuan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="8dp"
                    android:visibility="gone"
                    app:srcCompat="@drawable/ic_clear"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp">

                <CheckBox
                    android:id="@+id/check_output"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@drawable/oval_edit">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/output"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="8dp"
                        app:errorTextAppearance="@style/error_appearance">

                        <EditText
                            android:id="@+id/input_output"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:fontFamily="@font/varela_round"
                            android:hint="@string/output"
                            android:inputType="text"
                            android:padding="2dp"
                            android:singleLine="true"
                            android:textSize="14sp" />

                    </android.support.design.widget.TextInputLayout>

                    <ImageView
                        android:id="@+id/clear_output"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="8dp"
                        android:visibility="gone"
                        app:srcCompat="@drawable/ic_clear"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp">

                <CheckBox
                    android:id="@+id/check_keterangan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@drawable/oval_edit">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/keterangan"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="8dp"
                        app:errorTextAppearance="@style/error_appearance">

                        <EditText
                            android:id="@+id/input_keterangan"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:fontFamily="@font/varela_round"
                            android:hint="@string/keterangan"
                            android:inputType="text"
                            android:padding="2dp"
                            android:singleLine="true"
                            android:textSize="14sp" />

                    </android.support.design.widget.TextInputLayout>

                    <ImageView
                        android:id="@+id/clear_keterangan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="8dp"
                        android:visibility="gone"
                        app:srcCompat="@drawable/ic_clear"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.constraint.ConstraintLayout>
